@@ -26,7 +26,7 @@
     <td class="calendarMonthSelect" colspan="2"> [[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]] </td>
     <td class="calendarTitle" colspan="3"> [[CalendarName]]<br/>
       <font size="-1">[[CalendarMonth]], [[CalendarYear]]</font> </td>
-    <td class="calendarYearSelect" colspan="2">[[refresh_purge]]&nbsp;&nbsp;[[About]]&nbsp;&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]] </td>
+    <td class="calendarYearSelect" colspan="2">[[About]]&nbsp;&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]] </td>
   </tr>
   <!-- Header End -->
   <!-- Day Heading Start -->
@@ -253,11 +253,16 @@
   </tr>
   <!-- Footer Start -->
 </table>
-<table width=100% border=0><tr>
-<td style="font-size:85%;">[[Version]]&nbsp; &nbsp;<i>[[cookie_set]]</i> [[TimeTrackValues]] [[TodayData]]</td>
-<td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
+<table width=100% border=0>
+<tr>
+  <td style="font-size:85%;">[[Version]]</td>
+  <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
 </tr>
+  <tr>
+  <td style="font-size:85%;">[[TimeTrackValues]]</td>
+</tr>
+<tr><td>[[Load_iCal]]</td></tr>
 </table>
-[[Load_iCal]]
+[[TodayData]] <!-- (hidden) form post data containing date/page/name -->
 </form>
 <!-- Footer End -->
