@@ -7,7 +7,10 @@ notes will be added to the next released 'Readme.txt'. The notes in this file wi
 # moved from cookies to session states... this controls the 'month/year/today' buttons
 
 
-********** Trunk: v3.5.1 **********
+********** Trunk **********
 # re-ordered the template/add event list... it will now be templates 1st, then normal events
 
 # added initial logic for basic ical imports (VCALENDAR)...event, summary and date; use the 'ical' parameter to activate the tool... defaults to adding a new event, but 'ical=usemultievent' will add concat all events to '-event 0'
+
+# added effective date to 'enablelegacy' mode; this improves performace as the 
+  code only looks for legacy events effective that day and prior.... the default is ALL
